--- a/sample-task.html
+++ b/sample-task.html
@@ -14,7 +14,7 @@
 <p>HTML (HyperText Markup Language) is the standard markup language for creating web pages. It defines the structure and layout of a web document by using a variety of tags and attributes.</p>
 <h3 id="C"><abbr title="Cascading Style Sheets">CSS</abbr></h3>
 <p>CSS stands for Cascading Style Sheets. It is a language used to describe the presentation of a document written in HTML or XML. CSS is used to control the layout of multiple web pages all at once, making it a powerful tool for web developers.</p>
-<a href="Top">Go to Top</a>
+<p><a href="Top">Go to Top</a></p>
 </ol>
 </body>
 </html>
